--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -3,8 +3,7 @@
         display: flex;
         align-items: flex-start;
         justify-content: space-between;
-        
-        margin-bottom: 300px;
+        margin-bottom: 250px;
     }
 
     &-left {
@@ -141,7 +140,13 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        margin-bottom: 150px;
+        margin-bottom: 100px;
+
+        .swiper {
+            width: 100%;
+            height: 640px;
+            padding: 50px;
+        }
     }
 
 }
